Template drive forms for Login and password recovery

--- a/src/app/components/recover-password/recover-password.component.html
+++ b/src/app/components/recover-password/recover-password.component.html
@@ -11,25 +11,35 @@
     <div class="row justify-content-center w-100 m-0">
         <div class="col-12 col-sm-10 col-lg-6 col-xxl-4 text-center card">
             <main class="form-signin">
-                <form>
+                <form (ngSubmit)="onSubmit()" #form="ngForm">
                     <img class="mb-4 img-fluid w-50" src="../../../assets/IMG/Logo_png.png" alt="STOCK">
                     <h1 class="mb-3 fw-normal">Olvidé mi contraseña!</h1>
 
                     <p class="text-muted">¿Olvidaste la contraseña? <br> No te preocupes, es posible recuperarla</p>
-
+                    <span class="help-block" *ngIf="!email.valid && email.touched">Ingrese un email válido</span>
                     <div class="row input-group mx-0 my-3 p-0 rounded-3 email bg-color-grey">
                         <div class="col-1 m-0 p-0 d-flex justify-content-center align-items-center icon">
                             <i class="fa-solid fa-envelope color-iconGrey"></i>
                         </div>
                         <div class="col m-0 p-0 rounded-3">
                             <div class="form-floating m-0 rounded-3">
-                                <input type="email" class="form-control m-0 bg-color-grey" id="email" placeholder="Correo electrónico">
+                                <input
+                                    type="email"
+                                    class="form-control m-0 bg-color-grey"
+                                    id="email"
+                                    placeholder="Correo electrónico"
+                                    ngModel
+                                    name="email"
+                                    required
+                                    email
+                                    #email="ngModel"
+                                >
                                 <label for="email" class="my-0 color-iconGrey">Correo electrónico</label>
                             </div>
                         </div>
                     </div>
 
-                    <button class="w-100 btn btn-lg btn-purple" type="submit">Enviar correo de recuperación</button>
+                    <button class="w-100 btn btn-lg btn-purple" type="submit" [disabled]="!form.valid">Enviar correo de recuperación</button>
                     <a class="mt-4 mb-0 text-muted d-inline-block text-decoration-none" [routerLink]="['/']">Olvidalo, La he recordado</a>
                 </form>
             </main>
