--- a/src/app/components/recover-password/recover-password.component.scss
+++ b/src/app/components/recover-password/recover-password.component.scss
@@ -97,6 +97,12 @@ body {
             a:hover {
                 transform: scale(1.02);
             }
+            input.ng-invalid.ng-touched {
+                border: 1px solid rgb(197, 66, 66);
+            }
+            span.help-block{
+                color: rgb(197, 66, 66);
+            }
         }
     }
 }
