First commit login and password recovery done 90%

--- a/src/app/components/new-password-input/new-password-input.component.html
+++ b/src/app/components/new-password-input/new-password-input.component.html
@@ -7,7 +7,7 @@
 <div class="frame"></div>
 <div class="frame"></div>
 
-<div class="container-fluid d-flex align-items-center login" [ngStyle]="{height: height}">
+<div class="container-fluid d-flex align-items-center recover" [ngStyle]="{height: height}">
     <div class="row justify-content-center w-100 m-0">
         <div class="col-12 col-sm-10 col-lg-6 col-xxl-4 text-center card">
             <div *ngIf="isLoading" class="d-flex justify-content-center p-5">
@@ -16,33 +16,16 @@
                 </div>
             </div>
             <main *ngIf="!isLoading" class="form-signin">
-                <form (ngSubmit)="onSubmit()" #form="ngForm">
+                <div *ngIf="isDone">
+                    <img class="mb-5 img-fluid w-50" src="../../../assets/IMG/Logo_png.png" alt="STOCK">
+                    <button class="w-100 btn btn-lg btn-purple" type="button" [routerLink]="['/']">Iniciar Sesión</button>
+                </div>
+                <form (ngSubmit)="onSubmit()" #form="ngForm" *ngIf="!isDone">
                     <img class="mb-4 img-fluid w-50" src="../../../assets/IMG/Logo_png.png" alt="STOCK">
-                    <h1 class="mb-3 fw-normal">Bienvenido de vuelta!</h1>
+                    <h1 class="mb-3 fw-normal">Recuperar mi cuenta</h1>
 
-                    <span class="help-block" *ngIf="!email.valid && email.touched">Ingrese un email válido</span>
-                    <div class="row input-group mx-0 my-3 p-0 rounded-3 email bg-color-grey">
-                        <div class="col-1 m-0 p-0 d-flex justify-content-center align-items-center icon">
-                            <i class="fa-solid fa-envelope color-iconGrey"></i>
-                        </div>
-                        <div class="col m-0 p-0 rounded-3">
-                            <div class="form-floating m-0 rounded-3">
-                                <input
-                                    type="email"
-                                    class="form-control m-0 bg-color-grey"
-                                    id="email"
-                                    placeholder="Correo electrónico"
-                                    ngModel
-                                    name="email"
-                                    required
-                                    email
-                                    #email="ngModel"
-                                >
-                                <label for="email" class="my-0 color-iconGrey">Correo electrónico</label>
-                            </div>
-                        </div>
-                    </div>
-
+                    <p class="text-muted">La contraseña debe tener mínimo 8 caracteres, 1 minúscula, 1 mayúscula, 1 número y 1 símbolo</p>
+                    <span class="help-block" *ngIf="!password.valid && password.touched">Ingresa tu nueva contraseña</span>
                     <div class="row input-group mx-0 my-3 p-0 rounded-3 password bg-color-grey">
                         <div class="col-1 m-0 p-0 d-flex justify-content-center align-items-center icon">
                             <i class="fa-solid fa-lock color-iconGrey"></i>
@@ -57,33 +40,44 @@
                                     ngModel
                                     name="password"
                                     required
+                                    password
+                                    #password="ngModel"
                                 >
-                                <label for="password" class="my-0 color-iconGrey">Contraseña</label>
+                                <label for="password" class="my-0 color-iconGrey">Nueva contraseña</label>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="help-block" *ngIf="!isEqual">Las contraseñas no coinciden</span>
+                    <div class="row input-group mx-0 my-3 p-0 rounded-3 password bg-color-grey">
+                        <div class="col-1 m-0 p-0 d-flex justify-content-center align-items-center icon">
+                            <i class="fa-solid fa-lock color-iconGrey"></i>
+                        </div>
+                        <div class="col m-0 p-0 rounded-3">
+                            <div class="form-floating m-0 rounded-3">
+                                <input
+                                    type="password"
+                                    class="form-control m-0 bg-color-grey"
+                                    id="password2"
+                                    placeholder="Confirmar contraseña"
+                                    ngModel
+                                    name="password2"
+                                    required
+                                    password2
+                                    #password2="ngModel"
+                                >
+                                <label for="password2" class="my-0 color-iconGrey">Confirmar contraseña</label>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-check form-switch my-3 mx-1 text-start">
-                        <input
-                            class="form-check-input"
-                            type="checkbox"
-                            role="switch"
-                            id="remeberMe"
-                            name="remeberMe"
-                            ngModel
-                        >
-                        <label class="form-check-label color-iconGrey ms-1" for="remeberMe">Mantener la sesión iniciada</label>
-                    </div>
-
-                    <button
-                        class="w-100 btn btn-lg btn-purple"
-                        type="submit"
-                        [disabled]="!form.valid">Iniciar sesión</button>
-                    <a class="mt-4 mb-0 text-muted d-inline-block text-decoration-none" [routerLink]="['/recover_password']">Olvidé mi contraseña</a>
+                    <button class="w-100 btn btn-lg btn-purple" type="submit" [disabled]="!form.valid">Confirmar</button>
+                    <a class="mt-4 mb-0 text-muted d-inline-block text-decoration-none" [routerLink]="['/']">Olvidalo, La he recordado</a>
                 </form>
             </main>
         </div>
     </div>
 </div>
+
+
 
 
