--- a/src/app/components/recover-password/recover-password.component.html
+++ b/src/app/components/recover-password/recover-password.component.html
@@ -10,7 +10,12 @@
 <div class="container-fluid d-flex align-items-center recover" [ngStyle]="{height: height}">
     <div class="row justify-content-center w-100 m-0">
         <div class="col-12 col-sm-10 col-lg-6 col-xxl-4 text-center card">
-            <main class="form-signin">
+            <div *ngIf="isLoading" class="d-flex justify-content-center p-5">
+                <div class="spinner-grow text-primary" style="width: 5rem; height: 5rem;" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+            <main *ngIf="!isLoading" class="form-signin">
                 <form (ngSubmit)="onSubmit()" #form="ngForm">
                     <img class="mb-4 img-fluid w-50" src="../../../assets/IMG/Logo_png.png" alt="STOCK">
                     <h1 class="mb-3 fw-normal">Olvidé mi contraseña!</h1>
